--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dickson4954.github.io/Portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -17,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
