--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dickson4954.github.io/Portfolio",
+  "homepage": "https://vikakamau.github.io/Portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
